# talk-dockerized-python

./: Dockerfile  Dockerfile.dev  LICENSE  README.md  Readme.md  dev-docker.sh  dev-serve.sh  nonprod-bashrc  pyproject.toml  run-prodlike.sh  serve-local.sh
