[tool.poetry]
name = "talk-dockerized-python"
version = "0.1.0"
description = "A talk walking through a minimalist production quality python project in docker"
authors = ["Tod Hansmann <githubpub@todandlorna.com>"]
license = "CC BY-NC-SA 3.0"
readme = "README.md"
packages = [{include = "talk_dockerized_python"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
