[tool.poetry]
name = "talk-dockerized-python"
version = "0.1.0"
description = "A talk walking through a minimalist production quality python project in docker"
authors = ["Tod Hansmann <githubpub@todandlorna.com>"]
license = "CC BY-NC-SA 3.0"
readme = "README.md"
packages = [{include = "coolapp"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
